--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.0.3",
+    "@react-navigation/core": "^7.0.2",
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.2",
     "axios": "^1.7.7",
